testdata/baselines/reference/compiler/tluaMetatableNewindex.errors.txt
tluaMetatableNewindex.tlua(10,1): error TS2322: Type 'string' is not assignable to type 'number'.
tluaMetatableNewindex.tlua(12,29): error TS2339: Property 'fresh' does not exist on type '{ n: number; }'.
tluaMetatableNewindex.tlua(19,1): error TS2322: Type 'string' is not assignable to type 'number'.
tluaMetatableNewindex.tlua(23,9): error TS2339: Property 'name' does not exist on type '{}'.


==== tluaMetatableNewindex.tlua (4 errors) ====
    // A write to a key the table does not have runs __newindex. Only a write consults it: a read of a
    // missing key still misses.
    
    // Function form: __newindex is called as (table, key, value), so its value parameter types the
    // write and its key parameter says which keys it answers.
    local logged = setmetatable({ n = 1 }, {
      __newindex = function(t: object, k: string, v: number): void return; end,
    });
    logged.fresh = 2;
    logged.fresh = "no";
    ~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    logged["dyn"] = 3;                  // the element-access write path too
    local stillMissing = logged.fresh;  // a read never consults __newindex
                                ~~~~~
!!! error TS2339: Property 'fresh' does not exist on type '{ n: number; }'.
    logged.n = 5;                       // the merged shape has n, so this is a raw write
    
    // Table form: the fallback table receives the write, so its index signature types it.
    local store: Table<string, number> = {};
    local proxied = setmetatable({ n = 1 }, { __newindex = store });
    proxied.other = 3;
    proxied.other = "no";
    ~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    // A key outside the handler's domain is not answered.
    local numKeys = setmetatable({}, { __newindex = function(t: object, k: number, v: string): void return; end });
    numKeys.name = "x";
            ~~~~
!!! error TS2339: Property 'name' does not exist on type '{}'.
    